# flywise-assignment

./: .gitignore  README.md  dockerfile  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py  models.py
app/routes/: api.py
app/services/: __init__.py  semantic_search_service.py  sentiment_service.py  summarization_service.py
